# avro-parser-haskell

./: .codeowners  .gitignore  README.md  avro-parser-haskell.cabal  cabal.project  language-avro.cabal  stack-aeson2.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: haskell.yml
src/Language/Avro/: Parser.hs  Types.hs
test/: People.avdl  PeopleService.avdl  Simple.avdl  Spec.hs  hie.yaml
