name:                avro-parser-haskell
version:             0.1.0.0
synopsis:            Language definition and parser for AVRO files.
description:         See README.md for more details.
homepage:            https://github.com/githubuser/avro-parser-haskell#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Flavio Corpa
maintainer:          flavio.corpa@47deg.com
copyright:           Copyright © 2019-2020 <http://47deg.com 47 Degrees>
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Language.Avro.Types,
                       Language.Avro.Parser
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <5
                     , avro
                     , megaparsec
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
